--- a/register_style.css
+++ b/register_style.css
@@ -18,6 +18,10 @@ header {
   margin-right: 1rem;
 }
 
+.heading h2{
+  margin-top: -1rem;
+}
+
 nav ul {
   display: flex;
   align-items: center;
@@ -73,6 +77,7 @@ h4 {
   max-width: 35rem;
   align-items: center;
   padding: 0.6rem;
+  margin-bottom: 1rem;
 }
 .maindiv label {
   margin-left: 1rem;
@@ -135,10 +140,17 @@ main .btn{
     border: 0rem;
     border-radius: 10rem;
     padding-left: 4rem;
+    margin-top:3rem;
 }
 /* footer styles */
 .subscribe_block{
   text-align: center;
+  }
+  .subscribe_block h1{
+    padding-bottom: 1rem;
+  }
+  .subscribe_email_block{
+    padding-bottom: 3rem;
   }
   .subscribe_email{
     border: 0rem;
@@ -154,9 +166,20 @@ main .btn{
     border-radius: 10rem;
     margin-left: -2rem;
   }
+
+  footer{
+    padding-top: 4rem;
+  }
   .footer_block{
     display: grid;
     grid-template-columns: repeat(12, 1fr);
+  }
+  .footer_block h4{
+    color: #68625e;
+  }
+  .privacy_block{
+    background-color: #ffeadf;
+    text-align: center;
   }
   
   .contact_us{
