--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ h1,h2 ,p, h5, h3, h6, h4{
   display: grid;
   grid-template-columns: repeat(12, 1fr);
  padding-top: 3rem;
- padding-bottom: 10rem;
+ padding-bottom: 5rem;
 }
 
 .card{
@@ -141,6 +141,13 @@ h1,h2 ,p, h5, h3, h6, h4{
 .subscribe_block{
 text-align: center;
 }
+
+.subscribe_block h1{
+  padding-bottom: 1rem;
+}
+.subscribe_email_block{
+  padding-bottom: 3rem;
+}
 .subscribe_email{
   border: 0rem;
   background-color: rgb(248, 243, 243);
@@ -158,6 +165,14 @@ text-align: center;
 .footer_block{
   display: grid;
   grid-template-columns: repeat(12, 1fr);
+}
+
+.footer_block h4{
+  color: #68625e;
+}
+.privacy_block{
+  background-color: #ffeadf;
+  text-align: center;
 }
 
 .contact_us{
